<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayTripFragment">

    <!-- TODO: Update blank fragment layout -->

    <View
        android:id="@+id/colour_View"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trip_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_id_label" />

        <TextView
            android:id="@+id/date_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_label" />

        <TextView
            android:id="@+id/time_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_label" />

        <TextView
            android:id="@+id/start_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_label" />

        <TextView
            android:id="@+id/end_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_label" />

        <TextView
            android:id="@+id/type_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/editTrip_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/edit_button_label" />

            <Button
                android:id="@+id/deleteTrip_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/delete_button_label" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>